# that-ai-sessions

./: .gitignore  DESIGN.md  PROGRESS.md  README.md  pyproject.toml
scripts/: init.sh  run.sh
tas/: cli.py  config.py  index.py  scanner.py  updates.py  util.py
tas/web/: server.py
tas/web/static/: app.css  app.js  index.html
